Création router compétences

--- a/src/assets/tailwind.css
+++ b/src/assets/tailwind.css
@@ -44,7 +44,7 @@ h6 {
 }
 
 .card {
-  @apply rounded-lg shadow-lg border-sky-100 bg-sky-50 mt-6 md:mt-0;
+  @apply rounded-lg shadow-lg border-sky-100 bg-sky-50;
 }
 
 
