--- a/src/assets/tailwind.css
+++ b/src/assets/tailwind.css
@@ -93,17 +93,6 @@ a {
   animation: 6s linear -3s infinite animate
 }
 
-img {
-  position: relative;
-  width: 300px;
-  height: 100%;
-  object-fit: cover;
-  width: 100%;
-  border-radius: 8px;
-  z-index: 1;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  filter: grayscale(100%) brightness(0.9);
-}
 
 @keyframes animate {
   0% {
@@ -347,7 +336,7 @@ img {
 .swiper-slide {
     text-align: center;
     font-size: 18px;
-    background: #ffff;
+    background: transparent;
 
     display: flex;
     justify-content: center;
@@ -356,6 +345,7 @@ img {
 
 .swiper-slide img {
     display: block;
+
     width: 100%;
     height: 100%;
     object-fit: cover;
