--- a/src/assets/tailwind.css
+++ b/src/assets/tailwind.css
@@ -278,16 +278,27 @@ a {
 }
 
 @media screen and (max-width: 748px) {
+
+  div:not(.this-div) {
+    padding: 2px !important;
+  }
+
+  button {
+    margin-bottom: 10px;
+  }
+
   .wrapper {
     display: flex;
     flex-direction: column !important;
     width: 100% !important;
     animation: none;
-    padding: 20px !important;
+    padding: 0 !important;
+    margin: 0 !important;
   }
 
   .wrapper .col-md-3 {
     font-size: 10px !important;
+    width: 100% !important;
     border: none;
     box-shadow: 1px 2px 25px 1px rgba(48, 46, 46, 0.129);
     border-radius: 10px;
@@ -332,38 +343,38 @@ a {
 
 /* SWIPER */
 .swiper {
-    width: 50%;
-    height: 100%;
-    border-radius: 5px;
+  width: 50%;
+  height: 100%;
+  border-radius: 5px;
 }
 
 .swiper-slide {
-    text-align: center;
-    font-size: 18px;
-    background: transparent;
+  text-align: center;
+  font-size: 18px;
+  background: transparent;
 
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .swiper-slide img {
-    display: block;
+  display: block;
 
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 
 .swiper-pagination-bullet {
-  background-color: #888;   
-  opacity: 1;               
-  width: 12px;            
-  height: 12px;             
+  background-color: #888;
+  opacity: 1;
+  width: 12px;
+  height: 12px;
 }
 
 .swiper-pagination-bullet-active {
-  background-color: #a53292 !important; 
-  transform: scale(1.2) !important;     
+  background-color: #a53292 !important;
+  transform: scale(1.2) !important;
 }
