--- a/src/assets/tailwind.css
+++ b/src/assets/tailwind.css
@@ -21,6 +21,10 @@ h6 {
   @apply font-semibold;
 }
 
+.font-awesome {
+  @apply text-sky-500 text-2xl cursor-pointer transition transform hover:text-sky-600 hover:scale-110 hover:shadow-lg;
+}
+
 
 .btn-blue {
   @apply px-6 py-2.5 bg-sky-500 text-white font-semibold rounded-lg shadow-md transition-all duration-300 ease-in-out transform hover:bg-sky-600 hover:shadow-lg hover:-translate-y-0.5 hover:scale-105 active:scale-95 cursor-pointer;
